Resolves tdf#132322 - Link to Gerrit hash reintroduced

Mulit-line label split, Build realized as link_button

Required changes also solve tdf#132066 partially as many
localized strings are not anymore copied to clipboard

Change-Id: I346fdc65cd1734f17854eccd587fe0b7e216e720
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/93119
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>